Deleted utility and exception classes and added package-info.java for precondition
Multiple redundant utility and exception classes were removed, and a new package-info.java file was added for the precondition package. Formatting was adjusted in some exception classes to improve readability.